src/mzplasm/Plasm_Parser.output
Terminals which are not used

   UNDEFINED


Grammar

    0 $accept: input $end

    1 input: script
    2      | script script_elem
    3      | script error

    4 script: /* empty */
    5       | script script_elem ';'
    6       | script error ';'

    7 script_elem: expr
    8            | defin

    9 expr: TOKENID
   10     | LEX_VALUE
   11     | '~'
   12     | "**"
   13     | '*'
   14     | '/'
   15     | '+'
   16     | '-'
   17     | seq
   18     | '(' expr ')'
   19     | expr '.' expr
   20     | expr ':' expr
   21     | expr '~' expr
   22     | '[' exprseq ']'
   23     | expr "**" expr
   24     | expr '*' expr
   25     | expr '/' expr
   26     | expr '+' expr
   27     | expr '-' expr
   28     | expr expr expr
   29     | "MOVE" ':' expr

   30 seq: '<' exprseq '>'
   31    | '<' '>'

   32 exprseq: expr
   33        | exprseq ',' expr

   34 defin: "DEF" TOKENID params '=' expr locals defaults
   35      | "CLASS" TOKENID params isa '=' expr locals
   36      | "FEATURE" TOKENID params on '=' expr locals
   37      | "CONTROL" TOKENID params on '=' expr locals

   38 on: "ON" TOKENID

   39 isa: /* empty */
   40    | "ISA" TOKENID

   41 params: /* empty */
   42       | params '(' param_list ')'

   43 param_list: param
   44           | param_list ';' param

   45 param: idents "::" type

   46 type: expr

   47 idents: TOKENID
   48       | idents ',' TOKENID

   49 locals: /* empty */
   50       | "WHERE" loc_def_list "END"

   51 defaults: /* empty */
   52         | "DEFAULT" loc_def_list "END"

   53 loc_def_list: loc_def
   54             | loc_def_list ',' loc_def

   55 loc_def: TOKENID params '=' expr locals


Terminals, with rules where they appear

$end (0) 0
'(' (40) 18 42
')' (41) 18 42
'*' (42) 13 24
'+' (43) 15 26
',' (44) 33 48 54
'-' (45) 16 27
'.' (46) 19
'/' (47) 14 25
':' (58) 20 29
';' (59) 5 6 44
'<' (60) 30 31
'=' (61) 34 35 36 37 55
'>' (62) 30 31
'[' (91) 22
']' (93) 22
'~' (126) 11 21
error (256) 3 6
UNDEFINED (258)
TOKENID (259) 9 34 35 36 37 38 40 47 48 55
LEX_VALUE (260) 10
SINGLE_OP (261)
INFIXTOKEN (262)
"**" (263) 12 23
"::" (264) 45
"MOVE" (265) 29
"DEF" (266) 34
"CLASS" (267) 35
"FEATURE" (268) 36
"CONTROL" (269) 37
"ON" (270) 38
"ISA" (271) 40
"WHERE" (272) 50
"END" (273) 50 52
"DEFAULT" (274) 52


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
input (37)
    on left: 1 2 3, on right: 0
script (38)
    on left: 4 5 6, on right: 1 2 3 5 6
script_elem (39)
    on left: 7 8, on right: 2 5
expr (40)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29, on right: 7 18 19 20 21 23 24 25 26 27 28 29 32 33 34 35
    36 37 46 55
seq (41)
    on left: 30 31, on right: 17
exprseq (42)
    on left: 32 33, on right: 22 30 33
defin (43)
    on left: 34 35 36 37, on right: 8
on (44)
    on left: 38, on right: 36 37
isa (45)
    on left: 39 40, on right: 35
params (46)
    on left: 41 42, on right: 34 35 36 37 42 55
param_list (47)
    on left: 43 44, on right: 42 44
param (48)
    on left: 45, on right: 43 44
type (49)
    on left: 46, on right: 45
idents (50)
    on left: 47 48, on right: 45 48
locals (51)
    on left: 49 50, on right: 34 35 36 37 55
defaults (52)
    on left: 51 52, on right: 34
loc_def_list (53)
    on left: 53 54, on right: 50 52 54
loc_def (54)
    on left: 55, on right: 53 54


state 0

    0 $accept: . input $end

    $default  reduce using rule 4 (script)

    input   go to state 1
    script  go to state 2


state 1

    0 $accept: input . $end

    $end  shift, and go to state 3


state 2

    1 input: script .
    2      | script . script_elem
    3      | script . error
    5 script: script . script_elem ';'
    6       | script . error ';'

    error      shift, and go to state 4
    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16
    "DEF"      shift, and go to state 17
    "CLASS"    shift, and go to state 18
    "FEATURE"  shift, and go to state 19
    "CONTROL"  shift, and go to state 20

    $end  reduce using rule 1 (input)

    script_elem  go to state 21
    expr         go to state 22
    seq          go to state 23
    defin        go to state 24


state 3

    0 $accept: input $end .

    $default  accept


state 4

    3 input: script error .
    6 script: script error . ';'

    ';'  shift, and go to state 25

    $default  reduce using rule 3 (input)


state 5

    9 expr: TOKENID .

    $default  reduce using rule 9 (expr)


state 6

   10 expr: LEX_VALUE .

    $default  reduce using rule 10 (expr)


state 7

   18 expr: '(' . expr ')'

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16

    expr  go to state 26
    seq   go to state 23


state 8

   22 expr: '[' . exprseq ']'

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16

    expr     go to state 27
    seq      go to state 23
    exprseq  go to state 28


state 9

   30 seq: '<' . exprseq '>'
   31    | '<' . '>'

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16
    '>'        shift, and go to state 29

    expr     go to state 27
    seq      go to state 23
    exprseq  go to state 30


state 10

   15 expr: '+' .

    $default  reduce using rule 15 (expr)


state 11

   16 expr: '-' .

    $default  reduce using rule 16 (expr)


state 12

   13 expr: '*' .

    $default  reduce using rule 13 (expr)


state 13

   14 expr: '/' .

    $default  reduce using rule 14 (expr)


state 14

   12 expr: "**" .

    $default  reduce using rule 12 (expr)


state 15

   11 expr: '~' .

    $default  reduce using rule 11 (expr)


state 16

   29 expr: "MOVE" . ':' expr

    ':'  shift, and go to state 31


state 17

   34 defin: "DEF" . TOKENID params '=' expr locals defaults

    TOKENID  shift, and go to state 32


state 18

   35 defin: "CLASS" . TOKENID params isa '=' expr locals

    TOKENID  shift, and go to state 33


state 19

   36 defin: "FEATURE" . TOKENID params on '=' expr locals

    TOKENID  shift, and go to state 34


state 20

   37 defin: "CONTROL" . TOKENID params on '=' expr locals

    TOKENID  shift, and go to state 35


state 21

    2 input: script script_elem .
    5 script: script script_elem . ';'

    ';'  shift, and go to state 36

    $default  reduce using rule 2 (input)


state 22

    7 script_elem: expr .
   19 expr: expr . '.' expr
   20     | expr . ':' expr
   21     | expr . '~' expr
   23     | expr . "**" expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   26     | expr . '+' expr
   27     | expr . '-' expr
   28     | expr . expr expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 37
    '-'        shift, and go to state 38
    '*'        shift, and go to state 39
    '/'        shift, and go to state 40
    "**"       shift, and go to state 41
    '~'        shift, and go to state 42
    ':'        shift, and go to state 43
    '.'        shift, and go to state 44
    "MOVE"     shift, and go to state 16

    $default  reduce using rule 7 (script_elem)

    expr  go to state 45
    seq   go to state 23


state 23

   17 expr: seq .

    $default  reduce using rule 17 (expr)


state 24

    8 script_elem: defin .

    $default  reduce using rule 8 (script_elem)


state 25

    6 script: script error ';' .

    $default  reduce using rule 6 (script)


state 26

   18 expr: '(' expr . ')'
   19     | expr . '.' expr
   20     | expr . ':' expr
   21     | expr . '~' expr
   23     | expr . "**" expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   26     | expr . '+' expr
   27     | expr . '-' expr
   28     | expr . expr expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 37
    '-'        shift, and go to state 38
    '*'        shift, and go to state 39
    '/'        shift, and go to state 40
    "**"       shift, and go to state 41
    '~'        shift, and go to state 42
    ':'        shift, and go to state 43
    '.'        shift, and go to state 44
    "MOVE"     shift, and go to state 16
    ')'        shift, and go to state 46

    expr  go to state 45
    seq   go to state 23


state 27

   19 expr: expr . '.' expr
   20     | expr . ':' expr
   21     | expr . '~' expr
   23     | expr . "**" expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   26     | expr . '+' expr
   27     | expr . '-' expr
   28     | expr . expr expr
   32 exprseq: expr .

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 37
    '-'        shift, and go to state 38
    '*'        shift, and go to state 39
    '/'        shift, and go to state 40
    "**"       shift, and go to state 41
    '~'        shift, and go to state 42
    ':'        shift, and go to state 43
    '.'        shift, and go to state 44
    "MOVE"     shift, and go to state 16

    $default  reduce using rule 32 (exprseq)

    expr  go to state 45
    seq   go to state 23


state 28

   22 expr: '[' exprseq . ']'
   33 exprseq: exprseq . ',' expr

    ']'  shift, and go to state 47
    ','  shift, and go to state 48


state 29

   31 seq: '<' '>' .

    $default  reduce using rule 31 (seq)


state 30

   30 seq: '<' exprseq . '>'
   33 exprseq: exprseq . ',' expr

    '>'  shift, and go to state 49
    ','  shift, and go to state 48


state 31

   29 expr: "MOVE" ':' . expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16

    expr  go to state 50
    seq   go to state 23


state 32

   34 defin: "DEF" TOKENID . params '=' expr locals defaults

    $default  reduce using rule 41 (params)

    params  go to state 51


state 33

   35 defin: "CLASS" TOKENID . params isa '=' expr locals

    $default  reduce using rule 41 (params)

    params  go to state 52


state 34

   36 defin: "FEATURE" TOKENID . params on '=' expr locals

    $default  reduce using rule 41 (params)

    params  go to state 53


state 35

   37 defin: "CONTROL" TOKENID . params on '=' expr locals

    $default  reduce using rule 41 (params)

    params  go to state 54


state 36

    5 script: script script_elem ';' .

    $default  reduce using rule 5 (script)


state 37

   15 expr: '+' .
   26     | expr '+' . expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16

    $default  reduce using rule 15 (expr)

    expr  go to state 55
    seq   go to state 23


state 38

   16 expr: '-' .
   27     | expr '-' . expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16

    $default  reduce using rule 16 (expr)

    expr  go to state 56
    seq   go to state 23


state 39

   13 expr: '*' .
   24     | expr '*' . expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16

    $default  reduce using rule 13 (expr)

    expr  go to state 57
    seq   go to state 23


state 40

   14 expr: '/' .
   25     | expr '/' . expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16

    $default  reduce using rule 14 (expr)

    expr  go to state 58
    seq   go to state 23


state 41

   12 expr: "**" .
   23     | expr "**" . expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16

    $default  reduce using rule 12 (expr)

    expr  go to state 59
    seq   go to state 23


state 42

   11 expr: '~' .
   21     | expr '~' . expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16

    $default  reduce using rule 11 (expr)

    expr  go to state 60
    seq   go to state 23


state 43

   20 expr: expr ':' . expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16

    expr  go to state 61
    seq   go to state 23


state 44

   19 expr: expr '.' . expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16

    expr  go to state 62
    seq   go to state 23


state 45

   19 expr: expr . '.' expr
   20     | expr . ':' expr
   21     | expr . '~' expr
   23     | expr . "**" expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   26     | expr . '+' expr
   27     | expr . '-' expr
   28     | expr . expr expr
   28     | expr expr . expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 37
    '-'        shift, and go to state 38
    '*'        shift, and go to state 39
    '/'        shift, and go to state 40
    "**"       shift, and go to state 41
    '~'        shift, and go to state 42
    ':'        shift, and go to state 43
    '.'        shift, and go to state 44
    "MOVE"     shift, and go to state 16

    expr  go to state 63
    seq   go to state 23


state 46

   18 expr: '(' expr ')' .

    $default  reduce using rule 18 (expr)


state 47

   22 expr: '[' exprseq ']' .

    $default  reduce using rule 22 (expr)


state 48

   33 exprseq: exprseq ',' . expr

    TOKENID    shift, and go to state 5
    LEX_VALUE  shift, and go to state 6
    '('        shift, and go to state 7
    '['        shift, and go to state 8
    '<'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '/'        shift, and go to state 13
    "**"       shift, and go to state 14
    '~'        shift, and go to state 15
    "MOVE"     shift, and go to state 16

    expr  go to state 64
    seq   go to state 23


state 49

   30 seq: '<' exprseq '>' .

    $default  reduce using rule 30 (seq)


state 50

   19 expr: expr . '.' expr
   20     | expr . ':' expr
   21     | expr . '~' expr
   23     | expr . "**" expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   26     | expr . '+' expr
   27     | expr . '-' expr
   28     | expr . expr expr
   29     | "MOVE" ':' expr .

    "MOVE"  error (nonassociative)

    $default  reduce using rule 29 (expr)

    expr  go to state 45
    seq   go to state 23


state 51

   34 defin: "DEF" TOKENID params . '=' expr locals defaults
   42 params: params . '(' param_list ')'

    '('  shift, and go to state 65
    '='  shift, and go to state 66


state 52

   35 defin: "CLASS" TOKENID params . isa '=' expr locals
   42 params: params . '(' param_list ')'

    '('    shift, and go to state 65
    "ISA"  shift, and go to state 67

    $default  reduce using rule 39 (isa)

    isa  go to state 68


state 53

   36 defin: "FEATURE" TOKENID params . on '=' expr locals
   42 params: params . '(' param_list ')'

    '('   shift, and go to state 65
    "ON"  shift, and go to state 69

    on  go to state 70


state 54

   37 defin: "CONTROL" TOKENID params . on '=' expr locals
   42 params: params . '(' param_list ')'

    '('   shift, and go to state 65
    "ON"  shift, and go to state 69

    on  go to state 71


state 55

   19 expr: expr . '.' expr
   20     | expr . ':' expr
   21     | expr . '~' expr
   23     | expr . "**" expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   26     | expr . '+' expr
   26     | expr '+' expr .
   27     | expr . '-' expr
   28     | expr . expr expr

    '*'     shift, and go to state 39
    '/'     shift, and go to state 40
    "**"    shift, and go to state 41
    '~'     shift, and go to state 42
    ':'     shift, and go to state 43
    '.'     shift, and go to state 44
    "MOVE"  shift, and go to state 16

    $default  reduce using rule 26 (expr)

    expr  go to state 45
    seq   go to state 23


state 56

   19 expr: expr . '.' expr
   20     | expr . ':' expr
   21     | expr . '~' expr
   23     | expr . "**" expr
   24     | expr . '*' expr
   25     | expr . '/' expr
   26     | expr . '+' expr
   27     | expr . '-' expr
   27     | expr '-' expr .
   28     | expr . expr expr

    '*'     shift, and go to state 39
    '/'     shift, and go to state 40
    "**"    shift, and go to state 41
    '~'     shift, and go to state 42
    ':'     shift, and go to state 43
    '.'     shift, and go to state 44
    "MOVE"  shift, and go to state 16

    $default  reduce using rule 27 (expr)

    expr  go to state 45
    seq   go to state 23


state 57

   19 expr: expr . '.' expr
   20     | expr . ':' expr
   21     | expr . '~' expr
   23     | expr . "**" expr
   24     | expr . '*' expr
   24     | expr '*' expr .
   25     | expr . '/' expr
   26     | expr . '+' expr
   27     | expr . '-' expr
   28     | expr . expr expr

    "**"    shift, and go to state 41
    '~'     shift, and go to state 42
    ':'     shift, and go to state 43
    '.'     shift, and go to state 44
    "MOVE"  shift, and go to state 16

    $default  reduce using rule 24 (expr)
